# napari-piscis

./: .gitignore  LICENSE  README.md  TODO.md  napari.yaml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test.yml  test_and_deploy.yml
src/napari_piscis/: __init__.py  _version.py  _widget.py
tests/: test_import.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
