[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-piscis"
version = "0.0.1"
description = "Napari plugin for Piscis spot detection (smFISH)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [{name="Michael Blodgett", email="michaelablodgett@gmail.com"}]
dependencies = [
  "napari>=0.4.19",
  "magicgui>=0.8",
  "numpy",
  "piscis>=0.2.7",
  "jax>=0.7,<0.8"

]

[project.entry-points."napari.manifest"]
napari-piscis = "napari_piscis:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_piscis = ["napari.yaml"]

[tool.pytest.ini_options]
addopts = "-q"